compile-direct/tests/failing/2-generic_signature_repeated_error/main.af
str: @str
int: @int

arr: <T, T>((len: int, nth:(idx:int, none:(), one:(T))))

foo: (items: arr<str>) {
    @write("done", @exit(0))
}
